# zk-alloc

./: Cargo.toml  README.md  findings.tsv  preload_arena.c  preload_arena_count.c  preload_passthrough.c
.github/workflows/: ci.yml
benches/: alloc_throughput.rs
src/: arena.rs  config.rs  large.rs  lib.rs  phase.rs  pressure.rs  reentrant.rs  syscall.rs
tests/: correctness.rs  test_arc_phase.rs  test_box_dyn_phase.rs  test_concurrent_phase.rs  test_crossbeam_epoch.rs  test_hashmap_phase.rs  test_many_spans_stress.rs  test_nested_phase.rs  test_panic_phase.rs  test_phase_guard.rs  test_rayon.rs  test_rayon_audit.rs  test_realloc_overlap.rs  test_realloc_phase.rs  test_scope_nesting.rs  test_size_distribution.rs  test_size_routing_stress.rs  test_threadpool_resize.rs  test_worker_deque_growth.rs
