[package]
name = "zk-alloc"
version = "0.1.0"
edition = "2021"
description = "A memory allocator designed for ZK proving workloads"
license = "MIT OR Apache-2.0"

[dependencies]

[target.'cfg(not(all(target_os = "linux", target_arch = "x86_64")))'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

[[bench]]
name = "alloc_throughput"
harness = false
